fix header visibility in dark mode

--- a/SyncedIn/src/index.css
+++ b/SyncedIn/src/index.css
@@ -174,3 +174,7 @@ body.light .team-card-actions a {
   background-color: var(--tertiary);
   color: white;
 }
+
+body.dark .team-heading{
+  color: white;
+}
